--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1296,3 +1296,60 @@ h3.documentOutlineSlight:hover {
     background-color: #f4f4f4;
     border-radius: 5px;
 }
+
+#add_to_character {
+    position: absolute;
+    z-index: 881;
+
+    height: 50%;
+    width: 50%;
+
+    justify-self: center;
+    align-self: center;
+
+    backdrop-filter: blur(5px);
+    border-radius: 5px;
+
+    background-color: rgba(var(--common), 1);
+    padding: 15px;
+
+    margin-left: 20%;
+    box-sizing: border-box;
+}
+
+#add_to_character h3 {
+    margin: 0;
+}
+
+#add_to_character > div {
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+
+    padding: 5px;
+
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 1);
+}
+
+#add_to_character > div > div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    width: 100%;
+    padding: 15px;
+    border-radius: 5px;
+
+    background-color: rgba(var(--accent-tan-rgb), 0.2);
+}
+
+#add_to_character > div > div:hover {
+    cursor: pointer;
+}
+
+#add_to_character > div > div h3 {
+    font-weight: 800;
+    letter-spacing: normal;
+    text-transform: uppercase;
+}
