--- a/public/css/main.css
+++ b/public/css/main.css
@@ -293,6 +293,42 @@ button:hover {
     padding: 1.3em;
 }
 
+.connected {
+    height: 10px;
+    width: 10px;
+    background-color: rgb(106, 204, 134);
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 5px;
+}
+
+.not_connected {
+    height: 10px;
+    width: 10px;
+    background-color: rgb(241, 34, 45);
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 5px;
+}
+
+.syncStatus.synced{
+    background-color: rgba(106, 204, 134, 0.2);
+    border-radius: 5px;
+    padding: 5px;
+    gap: 5px;
+
+    height: fit-content;
+}
+
+.syncStatus.not_synced{
+    background-color: rgba(241, 34, 45, 0.2);
+    border-radius: 5px;
+    padding: 5px;
+    gap: 5px;
+
+    height: fit-content;
+}
+
 .campagin {
     padding: 1.5em;
 
