--- a/public/css/main.css
+++ b/public/css/main.css
@@ -305,13 +305,13 @@ button:hover {
 .not_connected {
     height: 10px;
     width: 10px;
-    background-color: rgb(241, 34, 45);
+    background-color: var(--accent-tan);
     border-radius: 50%;
     display: inline-block;
     margin-right: 5px;
 }
 
-.syncStatus.synced{
+.syncStatus.synced {
     background-color: rgba(106, 204, 134, 0.2);
     border-radius: 5px;
     padding: 5px;
@@ -320,13 +320,25 @@ button:hover {
     height: fit-content;
 }
 
-.syncStatus.not_synced{
-    background-color: rgba(241, 34, 45, 0.2);
+.syncStatus.synced h3 {
+    color: rgba(106, 204, 134, 1);
+}
+
+.syncStatus.not_synced {
+    background-color: rgba(var(--accent-tan-rgb), 0.2);
     border-radius: 5px;
     padding: 5px;
     gap: 5px;
 
     height: fit-content;
+}
+
+.syncStatus.not_synced h3 {
+    color: rgba(var(--accent-tan-rgb), 1);
+}
+
+.lore {
+    width: 45% !important;
 }
 
 .campagin {
@@ -1305,7 +1317,7 @@ h3.documentOutlineSlight {
     padding: 5px 10px;
     text-align: center;
 
-    width: fit-content;
+    width: fit-content !important;
     border: 1px solid rgba(var(--primary-crimson), 0.1);
     border-radius: 5px;
 }
